<resources>
    <string name="app_name">耀联金融</string>
    <!-- 注册页面start -->
    <string name="register">注册新用户</string>
    <string name="register_phone">手机号</string>
    <string name="recommend_phone">填写推荐人手机号(可不填写)</string>
    <string name="register_confirm">提交验证码</string>
    <string name="register_code_hint">请输入短信验证码</string>
    <string name="register_code_send">发送验证码</string>
    <string name="register_phone_send_hint">请输入手机号码</string>
    <string name="register_randCode_send_hint">请输入短信验证码</string>
    <string name="update_pwd_old_hint">请输入旧密码</string>
    <string name="register_pwd_first_hint">请输入新密码</string>
    <string name="register_pwd_second_hint">再次输入密码</string>
    <string name="register_pwd_submit">确认</string>
    <string name="register_first_response">请输入新密码</string>
    <string name="register_second_response">请输入第二次密码</string>
    <string name="register_pwd_disagree">二次密码输入不一致</string>
    <string name="register_xieyi">您还没有同意用户协议</string>
    <string name="jieShiShu_xieYi">您还没有认可《风险揭示书》所述内容</string>
    <string name="register_user_agreement">用户协议</string>
    <!-- 注册页面end -->

    <!-- 登陆页面start -->
    <string name="login_title">登录</string>
    <string name="login_register">注册</string>
    <string name="login_pwd_hint">密码</string>
    <string name="login_pwd_response">请输入登录密码</string>
    <string name="login_forgetPwd">忘记密码？</string>
    <!-- 登陆页面end -->

    <!-- 忘记密码页面start -->
    <string name="forgetPwd_title">忘记密码</string>
    <string name="forgetPwd_submit_btn">重置密码</string>
    <!-- 忘记密码页面end -->

    <!-- 首页标题页面start -->
    <string name="main_title_name">耀联金融</string>
    <string name="licai_title_name">理财产品</string>
    <string name="daikuan_title_name">贷款产品</string>
    <string name="company_title_name">公司介绍</string>
    <string name="user_title_name">个人中心</string>

    <string name="gridView_name_1">新手体验</string>
    <string name="gridView_name_2">理财产品</string>
    <string name="gridView_name_3">预约理财</string>
    <string name="gridView_name_4">预约贷款</string>
    <string name="gridView_name_5">企业文化</string>
    <string name="gridView_name_6">公司简介</string>
    <!-- 首页标题页面end -->
    <!-- 个人中心页面start -->
    <string name="user_center_1">我的订单</string>
    <string name="user_center_1_right">查看全部订单</string>
    <string name="user_center_2">我的收益</string>
    <string name="user_center_3">投资申请</string>
    <string name="user_center_4">贷款申请</string>
    <string name="user_center_5">修改密码</string>
    <string name="user_center_6">联系客服</string>
    <string name="user_center_logout">退出登录</string>
    <!-- 个人中心页面end -->
    <!-- 我的订单页面start -->
    <string name="my_order_liCai">我的理财</string>
    <string name="my_order_daiKuan">我的贷款</string>
    <!-- 我的订单页面end -->
    <string name="apply_invest">申请信息</string>
    <string name="apply_invest_name">请输入您的姓名</string>
    <string name="apply_invest_phone">请输入您的电话号码</string>
    <string name="apply_invest_idCard">请输入您的身份证号码</string>
    <string name="apply_invest_num">请输入购买的份数</string>
    <string name="apply_loan_price">请输入您的贷款金额</string>
    <string name="apply_loan_stage_list">请选择分期</string>
    <string name="apply_product_null">申请的产品为空,不能提交</string>

    <string name="company_all">耀联投资</string>
    <string name="company_news">联源贸易</string>
    <string name="company_dongTai">科技公司</string>
    <string name="company_maoYi">汽车销售</string>

    <string name="noData">没有更多啦</string>
    <string name="netOff">网络未连接</string>
    <string name="info_detail">资讯详情</string>
    <string name="logout_hint">退出登录成功</string>

    <string name="income_detail">收益明细</string>
    <string name="user_message">消息</string>
    <string name="financing_new_text">理 财 新 品</string>
    <string name="loan_new_text">贷 款 新 品</string>
</resources>
