<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="25dp"
        android:paddingTop="10dp"
        android:paddingLeft="15dp"
        android:paddingBottom="5dp"
        android:paddingRight="15dp">

        <ImageView
            android:id="@+id/img_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_telephone"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/reg_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_phone"
            android:layout_toRightOf="@id/img_reg"
            android:textColor="@color/font_9"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/phone_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/reg_phone"
            android:layout_marginLeft="5dp"
            android:textColor="@color/font_9"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_off"
            android:layout_alignParentRight="true"
        android:layout_centerVertical="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="25dp"
        android:paddingTop="10dp"
        android:paddingLeft="15dp"
        android:paddingBottom="5dp"
        android:paddingRight="15dp">

        <ImageView
            android:id="@+id/img_code_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_key"
            android:layout_centerVertical="true"/>

        <EditText
            android:id="@+id/code_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_code_reg"
            android:layout_marginLeft="5dp"
            android:textColor="@color/font_9"
            android:textColorHint="@color/font_9"
            android:hint="@string/register_code_hint"/>

        <Button
            android:id="@+id/send_randCode"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textColor="@color/white"
            android:text="@string/register_code_send"
            android:background="@drawable/linzi_button_yzm"
            android:textSize="16sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <Button
        android:id="@+id/submit_register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linzi_button_red"
        android:text="@string/register_confirm"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"/>

</LinearLayout>
