<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="25dp"
        android:paddingTop="10dp"
        android:paddingLeft="15dp"
        android:paddingBottom="5dp"
        android:paddingRight="15dp">

        <ImageView
            android:id="@+id/img_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_telephone"
            android:layout_centerVertical="true"/>

        <EditText
            android:id="@+id/login_phone_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_reg"
            android:layout_alignRight="@+id/clear_phone_text"
            android:layout_marginLeft="5dp"
            android:textColor="@color/font_9"
            android:textColorHint="@color/font_9"
            android:hint="@string/register_phone"/>

        <ImageView
            android:id="@+id/clear_phone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_off"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="25dp"
        android:paddingTop="10dp"
        android:paddingLeft="15dp"
        android:paddingBottom="5dp"
        android:paddingRight="15dp">

        <ImageView
            android:id="@+id/img_code_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_key"
            android:layout_centerVertical="true"/>

        <EditText
            android:id="@+id/login_pwd_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_code_reg"
            android:layout_marginLeft="5dp"
            android:textColor="@color/font_9"
            android:textColorHint="@color/font_9"
            android:hint="@string/login_pwd_hint"/>

        <ImageView
            android:id="@+id/clear_login_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_off"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <Button
        android:id="@+id/submit_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linzi_button_red"
        android:text="@string/login_title"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/login_forgetPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/title_bg"
            android:text="@string/login_forgetPwd"
            android:layout_alignParentRight="true"
            android:textSize="14sp"/>

    </RelativeLayout>
</LinearLayout>
