<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <ImageView
            android:id="@+id/img_old_pwd_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_key"
            android:layout_centerVertical="true"/>

        <EditText
            android:id="@+id/password_old"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/register_input"
            android:inputType="textPassword"
            android:layout_toRightOf="@id/img_old_pwd_icon"
            android:textColor="@color/font_6"
            android:textColorHint="@color/font_9"
            android:hint="@string/update_pwd_old_hint"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"/>

        <ImageView
            android:id="@+id/clear_pwd_old"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_off"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <ImageView
            android:id="@+id/img_reg_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_key"
            android:layout_centerVertical="true"/>

        <EditText
            android:id="@+id/password_first"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/register_input"
            android:inputType="textPassword"
            android:layout_toRightOf="@id/img_reg_submit"
            android:textColor="@color/font_6"
            android:textColorHint="@color/font_9"
            android:hint="@string/register_pwd_first_hint"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"/>

        <ImageView
            android:id="@+id/clear_pwd_first_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_off"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <ImageView
            android:id="@+id/img_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_key"
            android:layout_centerVertical="true"/>

        <EditText
            android:id="@+id/password_second"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/register_input"
            android:inputType="textPassword"
            android:layout_toRightOf="@id/img_reg"
            android:textColor="@color/font_6"
            android:textColorHint="@color/font_9"
            android:hint="@string/register_pwd_second_hint"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"/>

        <ImageView
            android:id="@+id/clear_pwd_second_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_off"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <Button
        android:id="@+id/submit_register_pwd_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linzi_button_red"
        android:text="@string/user_center_5"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"/>

</LinearLayout>
